--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,6 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   firebase_core: ^2.29.0
-  google_matter_flutter: ^0.0.1
   firebase_auth: ^4.19.2
   cloud_firestore: ^4.17.0
   freezed: ^2.5.2
@@ -49,6 +48,15 @@ dependencies:
   injectable: ^2.4.1
   firebase_storage: ^11.7.2
   image_picker: ^1.1.0
+  dotenv: ^4.2.0
+  flutter_dot: ^0.0.0
+  geolocator: ^11.0.0
+  geocoding: ^2.1.1
+  flutter_google_maps_webservices: ^1.1.1
+  google_maps_flutter_android: ^2.6.0
+  permission_handler: ^11.0.1
+  google_maps_flutter: ^2.5.0
+
 
 dev_dependencies:
   flutter_test:
@@ -75,10 +83,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-
+  assets:
+    - api.env
+    
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
