--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   google_maps_flutter_android: ^2.6.0
   permission_handler: ^11.0.1
   google_maps_flutter: ^2.5.0
+  location: ^6.0.1
 
 
 dev_dependencies:
@@ -85,6 +86,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - api.env
+    - assets/loading_loaction_image/
     
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
