--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,8 @@ dependencies:
   permission_handler: ^11.0.1
   google_maps_flutter: ^2.5.0
   location: ^6.0.1
+  flutter_polyline_points: ^2.0.0
+
 
 
 dev_dependencies:
@@ -86,6 +88,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - api.env
+    - assets/
     - assets/loading_loaction_image/
     
   # An image asset can refer to one or more resolution-specific "variants", see
